[gd_scene load_steps=12 format=3 uid="uid://dknmtoddlhvpy"]

[ext_resource type="Script" uid="uid://caua1mlhfqvm2" path="res://Resources/Enemies/Pea/PeaBoss.gd" id="1_r7d66"]
[ext_resource type="Texture2D" uid="uid://bop4agi2pcmek" path="res://Resources/Enemies/Pea/peaboss.png" id="2_ssyrd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hbd5h"]
radius = 20.0998

[sub_resource type="CircleShape2D" id="CircleShape2D_r0x8f"]
radius = 301.81

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lw6r3"]
radius = 16.0
height = 42.0

[sub_resource type="Animation" id="Animation_otd76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_as51u"]
resource_name = "walkdown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gegta"]
resource_name = "walkleft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ahubu"]
resource_name = "walkright"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_h0ok8"]
resource_name = "walkup"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bwy66"]
_data = {
&"RESET": SubResource("Animation_otd76"),
&"walkdown": SubResource("Animation_as51u"),
&"walkleft": SubResource("Animation_gegta"),
&"walkright": SubResource("Animation_ahubu"),
&"walkup": SubResource("Animation_h0ok8")
}

[node name="PeaBoss" type="CharacterBody2D"]
script = ExtResource("1_r7d66")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_hbd5h")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2(3, 15)
shape = SubResource("CircleShape2D_r0x8f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(1.40625, 1.28125)
texture = ExtResource("2_ssyrd")
hframes = 4
vframes = 4

[node name="HitArea" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(1, -2)
shape = SubResource("CapsuleShape2D_lw6r3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bwy66")
}
